--- a/kap11/kap11.tex
+++ b/kap11/kap11.tex
@@ -486,8 +486,7 @@ Diese sollten ohne weitere Rechtfertigung oder Beweis verwendet werden dürfen. 
   \int\dfrac{1}{\cos^2x}dx &= \tan x + C\\
   \int\dfrac{1}{\sqrt{x}}dx &= 2\sqrt{x} + C\\
   \int\dfrac{u'(x)}{u(x)} dx &= \ln(|u(x)|) + C\\
-  \int e^{ax+b}dx &= \dfrac{1}{a}e^{ax+b} + C\\
-  \int \dfrac{1}{\sqrt x} &= 2\sqrtx + C\\
+  \int e^{ax+b}dx &= \dfrac{1}{a}e^{ax+b} + C
 \end{align*}
 \\
 \danger Definitionsmengen sind zu beachten.
