--- a/kap5/saetze.tex
+++ b/kap5/saetze.tex
@@ -46,7 +46,7 @@
   \end{center}
 \end{Beweis}
 \begin{Bemerkung}
-  Dieser Beweis ist weitaus intuitiver und einfacher, wenn er in der klasischen Geometrie vollführt wird, aber unser Ziel ist es die vorliegenden Sätze über Vektoren, und damit analytisch zu beweisen.
+  Dieser Beweis ist weitaus intuitiver und einfacher, wenn er in der klassischen Geometrie vollführt wird, aber unser Ziel ist es die vorliegenden Sätze über Vektoren, und damit analytisch zu beweisen.
 \end{Bemerkung}
 \begin{Theorem}[- Umkehrung]
   \begin{minipage}{0.5\textwidth}
