--- a/kap9/kap9.tex
+++ b/kap9/kap9.tex
@@ -1,9 +1,9 @@
 \chapter{Matrizen}
 \chapterauthor{Bruno}
 
-	\section{Lineare Gleichungssysteme und Gau"salgorythmus}
+	\section{Lineare Gleichungssysteme und Gaußalgorithmus}
 
-Lineare Gleichungssysteme lassen sich aufwendig mit Einsetzungsverfahren oder Additionsverfahren l"osen, Carl Friedrich Gauß (1777-1855) hat ein ''Algorythmus'' erfunden, mit dem sie sich ohne Taschenrechner leicht und relativ schnell l"osen lassen.\\
+Lineare Gleichungssysteme lassen sich aufwendig mit Einsetzungsverfahren oder Additionsverfahren l"osen, Carl Friedrich Gauß (1777-1855) hat ein Algorithmus erfunden, mit dem sie sich ohne Taschenrechner leicht und relativ schnell l"osen lassen.\\
 Am Besten wird dieser mit einem Beispiel Erl"autert:\\
 \\
 $\Rightarrow$ $\left\{ \begin{array}{rccl}
