Kein wirklicher Fortschritt...

--- a/kap11/kap11.tex
+++ b/kap11/kap11.tex
@@ -201,7 +201,7 @@ Eine Konsequenz dessen ist:
 \begin{Beweis}\\
 \begin{align*}
   &&(u(x)*v(x))' &= u'(x)v(x)+u(x)v'(x)\\
-  &\Leftrightarrow & \int (u(x)*v(x))' dx &= \int u'(x)v(x)+\int u(x)v'(x)\\
+  &\Rightarrow & \int (u(x)*v(x))' dx &= \int u'(x)v(x)+\int u(x)v'(x)\\
   &\Leftrightarrow & u(x)*v(x) &= \int u'(x)v(x)+\int u(x)v'(x)\\
   &\Leftrightarrow & \int u(x)v'(x) &= u(x)*v(x)- \int u'(x)v(x)\\
 \end{align*}
