--- a/style.tex
+++ b/style.tex
@@ -15,9 +15,12 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %Für Kopf- und Fußzeilen:
 \pagestyle{fancy}
+\fancyhf{}
 \fancyhead[L]{\nouppercase{\leftmark}}
-\fancyhead[R]{Skript SMP}
-\fancyfoot[C]{\thepage}
+\fancyhead[R]{Mathe in SMP}
+%\fancyfoot[C]{\thepage}
+
+
 
 
 
