--- a/main.tex
+++ b/main.tex
@@ -4,10 +4,10 @@
 \usepackage{amssymb}                              %...Und Symbole
 \usepackage{colonequals}                          %Vertikal zentrierter Doppelpunkt
 \usepackage{mathrsfs}
-\usepackage{amsfonts}
+%\usepackage{amsfonts}
 \usepackage[T1]{fontenc}
 \usepackage[margin=2cm]{geometry}	                %Seitenrand
-\usepackage{fancyhdr}	                            %Titelblatt
+\usepackage{fancyhdr}	                            %Header
 \usepackage{graphicx}	                            %Bilder einfügen
 \usepackage{wrapfig}                               %Text um Graphiken "wickeln" (wrap)
 \usepackage[most]{tcolorbox}
@@ -26,7 +26,7 @@
 \usepackage[makeroom]{cancel}                     %Durchgestrichene Terme mit \cancel{}
 \usepackage{tkz-tab}                              %Für Monotonietabellen??
 \usepackage{marvosym}                             %Symbole wie Blitze und co. ...
-\usepackage{stackengine}                          %Wofür sind die nächsten 4 imports?
+\usepackage{stackengine}                          %Zeichen übereinander "stapeln"
 %\usepackage{scalerel}
 \usepackage{epigraph}                             %Fürs Titelblatt
 \usepackage{array}			                          %Gleichungen mit mehr als einem Zeichen in der Zeile oder Tabellen
@@ -47,28 +47,31 @@
 
 
 \include{style}
-\begin{document}
-\include{title}
-%\pagenumbering{gobble}
-\blankpage
-\tableofcontents
-\include{pagenumbering}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%Kapitel bitte hier einbinden:
-\include{kap1/kap1}
-\include{kap2/kap2}
-\include{kap3/kap3}
-\include{kap4/kap4}
-\include{kap5/kap5}
-\include{kap6/kap6}
-\include{kap7/kap7}
-\include{kap8/kap8}
-\include{kap9/kap9}
-\include{kap10/kap10}
-\include{kap11/kap11}
-\include{kap12/kap12}
-\include{kap13/kap13}
-\include{kap14/kap14}
-%und so weiter
 
+\usepackage[scale=.9]{tgheros} % or helvet
+\renewcommand{\familydefault}{\sfdefault}
+
+\begin{document}
+  \include{title}
+  \blankpage
+  \tableofcontents
+  \include{pagenumbering}
+  %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+  %Kapitel bitte hier einbinden:
+  \include{kap1/kap1}
+  \include{kap2/kap2}
+  \include{kap3/kap3}
+  \include{kap4/kap4}
+  \include{kap5/kap5}
+  \include{kap6/kap6}
+  \include{kap7/kap7}
+  \include{kap8/kap8}
+  \include{kap9/kap9}
+  \include{kap10/kap10}
+  \include{kap11/kap11}
+  \include{kap12/kap12}
+  \include{kap13/kap13}
+  \include{kap14/kap14}
+  %und so weiter
+  %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \end{document}
