--- a/kap7/kap7.tex
+++ b/kap7/kap7.tex
@@ -1,4 +1,5 @@
 \chapter{Statistik und Wahrscheinlichkeit}
-\chapterauthor{???}
+\chapterauthor{Rémy?}
 
-\section{Hypothesentests}
+
+\section{... }
