--- a/main.tex
+++ b/main.tex
@@ -2,14 +2,12 @@
 
 \usepackage{amsmath}		                          %Matheschreibweise...
 \usepackage{amssymb}                              %...Und Symbole
-\usepackage{colonequals}                          %Vertikal zentrierter Doppelpunkt
-\usepackage{mathrsfs}
-%\usepackage{amsfonts}
+%\usepackage{mathrsfs}
 \usepackage[T1]{fontenc}
 \usepackage[margin=2cm]{geometry}	                %Seitenrand
 \usepackage{fancyhdr}	                            %Header
-\usepackage{graphicx}	                            %Bilder einfügen
-\usepackage{wrapfig}                               %Text um Graphiken "wickeln" (wrap)
+%\usepackage{graphicx}	                          %Bilder einfügen
+%\usepackage{wrapfig}                              %Text um Graphiken "wickeln" (wrap)
 \usepackage[most]{tcolorbox}
 \usepackage{tikz,pgf,pgfplots}                    %Grafiken zeichnen
 \usepackage{mdframed}	                            %Box			%\begin{mdframed} 		und			%\end{mdframed}
@@ -27,19 +25,15 @@
 \usepackage{tkz-tab}                              %Für Monotonietabellen??
 \usepackage{marvosym}                             %Symbole wie Blitze und co. ...
 \usepackage{stackengine}                          %Zeichen übereinander "stapeln"
-%\usepackage{scalerel}
 \usepackage{epigraph}                             %Fürs Titelblatt
-\usepackage{array}			                          %Gleichungen mit mehr als einem Zeichen in der Zeile oder Tabellen
+%\usepackage{array}			                          %Gleichungen mit mehr als einem Zeichen in der Zeile oder Tabellen
 \usepackage{tocloft,titletoc,titlesec}            %Fürs Inhaltsverzeichnis
 
 \pgfplotsset{compat=1.15}
-\usepackage{subfiles}
 \usetikzlibrary{arrows}
 %\usetikzlibrary{fit}
 %Für die Seitenangabe
-\usepackage{calc}
 \usepackage{flowfram}
-\usepackage{color}
 \usepackage{nopageno}
 
 \nonstopmode                                      %Fehler bei Kompilierung werden "leise" gestellt (sehr viel praktischer)
