--- a/style.tex
+++ b/style.tex
@@ -179,7 +179,7 @@
     Pascal Borel \\
     Rémy Moll \\
     [0,5cm]
-    \textbf{1$^{ere}$ \& Te SMP}
+    \textbf{1$^{\text{ère}}$ \& Te SMP}
     }
 % The following code is borrowed from: https://tex.stackexchange.com/a/86310/10898
 \newcommand\titlepagedecoration{%
